# pygerg

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
pygerg/: __init__.py  gerg88.py
tests/: test_gerg88.py
