[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygerg"
version = "0.1.0"
description = "Python implementation of the GERG-88 standard for natural gas properties"
readme = "README.md"
authors = [
    {name = "Tijs van der Velden", email = "tijsvdvelden@hotmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/safersephy/pygerg"
"Bug Tracker" = "https://github.com/safersephy/pygerg/issues"

[dependency-groups]
dev = [
    "pytest>=7.4.4",
]
